--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -8,8 +8,9 @@ slide_background = #eaeaea
 
 slide_transition_length = .6s
 slide_transition_easing = ease
-slide_transition_translate_x = 0
 slide_transition_rotate_y = 90deg
+// Safari bugs out on 3d transform-origins, so we have to fake it
+slide_transition_nudge_x = -100px
 
 bullet_transition_length = .3s
 bullet_transition_easing = ease
@@ -21,6 +22,14 @@ bullet_transition_translate_x = 16px
   box-sizing: border-box
   margin: 0
   padding: 0
+
+@media print
+  *
+    -webkit-print-color-adjust: exact
+
+@page
+  size: landscape
+  margin: 0
 
 // bespoke.js layout styles
 
@@ -35,11 +44,17 @@ article
     left: 0
     right: 0
     overflow: hidden
+    @media print
+      overflow: visible
+      position: static
     perspective: 600px
 
 .bespoke-slide
-  transition: all slide_transition_length slide_transition_easing
-  transform-origin: 50% 50% ((slide_width / 2) * -1)
+  transition:
+    transform slide_transition_length slide_transition_easing,
+    opacity slide_transition_length slide_transition_easing,
+    background slide_transition_length slide_transition_easing
+  transform-origin: 50% 50% 0
   backface-visibility: hidden
   display: flex
   flex-direction: column
@@ -56,16 +71,27 @@ article
   background: slide_background
   padding: 40px
   border-radius: 0
+  @media print
+    zoom: 1 !important // disable bespoke-scale
+    height: 743px // seems to correspond with an A4, landscape page height
+    width: 100%
+    page-break-before: always
+    position: static
+    margin: 0
 
 .bespoke-before
-  transform: translateX(slide_transition_translate_x * -1) rotateY(slide_transition_rotate_y * -1)
+  transform: translateX(slide_transition_nudge_x * -1) translateX(slide_width / -2) rotateY(slide_transition_rotate_y * -1) translateX(slide_width / -2)
 
 .bespoke-after
-  transform: translateX(slide_transition_translate_x) rotateY(slide_transition_rotate_y)
+  transform: translateX(slide_transition_nudge_x) translateX(slide_width / 2) rotateY(slide_transition_rotate_y) translateX(slide_width / 2)
+  @media print
+    transform: none
 
 .bespoke-inactive
   opacity: 0
   pointer-events: none
+  @media print
+    opacity 1
 
 .bespoke-active
   opacity: 1
@@ -79,9 +105,43 @@ article
   opacity: 0
   li&
     transform: translateX(bullet_transition_translate_x)
+  @media print
+    opacity: 1
 
 .bespoke-bullet-active
   opacity: 1
+
+// bespoke-scale styles
+
+.bespoke-scale-parent
+  perspective: 600px
+  position: absolute
+  top: 0
+  left: 0
+  right: 0
+  bottom: 0
+  @media print
+    transform: none !important
+
+// bespoke-progress styles
+
+.bespoke-progress-parent
+  position: absolute
+  top: 0
+  left: 0
+  right: 0
+  height: 2px
+  @media only screen and (min-width: 1366px)
+    height: 4px
+  @media print
+    display: none
+
+.bespoke-progress-bar
+  transition: width .6s ease
+  position: absolute
+  height: 100%
+  background: #0089f3
+  border-radius: 0 4px 4px 0
 
 // bespoke-state styles
 
@@ -89,24 +149,10 @@ article
 .emphatic .bespoke-slide
   background: slide_background
 
-// bespoke-remote styles
-.bespoke-remote-indicator
-  width: 8px
-  height: 8px
-  position: absolute
-  bottom: 4px
-  right: 4px
-  border-radius: 8px
-
-.bespoke-remote-indicator-established
-  background: #EED659
-
-.bespoke-remote-indicator-connected
-  background: #9AEE59
-
 // prism styles
 
 code
+  display: block // fixes flexbox rendering issues in Safari
   padding: 26px !important
 
 // content styles
@@ -148,5 +194,5 @@ p
   line-height: 22px
 
 a
-  color: #0093CC
+  color: #0089f3
   text-decoration: none
