--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -149,6 +149,22 @@ article
 .emphatic .bespoke-slide
   background: slide_background
 
+// bespoke-remote styles
+
+.bespoke-remote-indicator
+  width: 8px
+  height: 8px
+  position: absolute
+  bottom: 4px
+  right: 4px
+  border-radius: 8px
+
+.bespoke-remote-indicator-established
+  background: #EED659
+
+.bespoke-remote-indicator-connected
+  background: #9AEE59
+
 // prism styles
 
 code
