Add notes support

--- a/src/index.jade
+++ b/src/index.jade
@@ -24,6 +24,11 @@ html
           li Bullet 1
           li Bullet 2
           li Bullet 3
+        aside
+          p Some notes
+          p Talk about this thing
+          p And that thing
+          p Don't forget this
 
       section
         h2 Syntax Highlighting
