--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -165,6 +165,9 @@ article
 .bespoke-remote-indicator-connected
   background: #9AEE59
 
+.bespoke-slide > aside
+  display: none
+
 // prism styles
 
 code
